--- a/app/gradle/libs.versions.toml
+++ b/app/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ rules = "1.6.1"
 runner = "1.6.2"
 securityCrypto = "1.1.0-alpha06"
 securityCryptoKtx = "1.0.0"
+espressoIdlingResource = "3.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +41,7 @@ places = { group = "com.google.android.libraries.places", name = "places", versi
 firebase-common-ktx = { group = "com.google.firebase", name = "firebase-common-ktx", version.ref = "firebaseCommonKtx" }
 firebase-messaging-ktx = { group = "com.google.firebase", name = "firebase-messaging-ktx", version.ref = "firebaseMessagingKtx" }
 androidx-security-crypto-ktx = { group = "androidx.security", name = "security-crypto-ktx", version.ref = "securityCryptoKtx" }
+androidx-espresso-idling-resource = { group = "androidx.test.espresso", name = "espresso-idling-resource", version.ref = "espressoIdlingResource" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
