--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -21,6 +21,14 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          
+      - name: Install Dependencies
+        run: |
+          npm ci  # Ensures all dependencies from package-lock.json are installed
+
+      - name: Verify Jest is Installed
+        run: |
+          npx jest --version  # Check if Jest is installed
 
       - name: Run Jest Tests
         run: |
