--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          
+
       - name: Install Dependencies
         run: |
           npm ci  # Ensures all dependencies from package-lock.json are installed
@@ -32,4 +32,5 @@ jobs:
 
       - name: Run Jest Tests
         run: |
-          npx jest backend_test/backend_nomock.test.ts backend_test/backend_mock.test.ts --coverage --runInBand
+          cd backend_test
+          npx jest backend_nomock.test.ts backend_mock.test.ts --coverage --runInBand
