--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.9.0
         with:
-          mongodb-version: '5.0
+          mongodb-version: '5.0'
               
       - name: Run Jest Tests
         run: |
